# CAN

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  test.ipynb
notebooks/: 17_ecu_head_charts.ipynb  17_ecu_step_charts.ipynb  ECUfrequency.ipynb  MSEprofiling.ipynb  entropy.ipynb  test.ipynb
src/: autoencoder.py  main.py  report_generator.py
