[project]
name = "can"
version = "0.1.0"
description = "CAN bus data IDS using LSTM/AE"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel",
    "matplotlib",
    "pandas==2.2.3",
    "scikit-learn",
    "tensorflow",
    "tqdm",
    "fg-data-profiling",
    "numpy>=2.3.5",
]
